--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -183,6 +183,8 @@
 	  eConvenor updates
     </div>
     <div class="panel-body">
+      <p><strong>Improvements made on May 22nd</strong></p>
+      <p>1. Added the FAQs section. They still need to be formatted nicely, but you'll find them under the Help menu in the top right corner of the screen.</p>
       <p><strong>Improvements made on May 21st</strong></p>
       <p>1. Summaries of overdue, incomplete and recently completed tasks can now be added to minutes. Look for the check box in the "Meeting details" panel of the minutes editing view to activiate this feature.</p>
       <p>2. The format of task reminder emails has been overhauled to make them look much nicer.</p>
@@ -206,19 +208,15 @@
         </thead>
         <tbody> 
           <tr>
-            <td>1. FAQ section</td>
-            <td>22 May</td>
+            <td>1. User Guide</td>
+            <td>25 May</td>
           </tr>
           <tr>
-            <td>2. User Guide</td>
-            <td>23 May</td>
+            <td>2. Improved Quick Start Guide</td>
+            <td>25 May</td>
           </tr>
           <tr>
-            <td>3. Improved Quick Start Guide</td>
-            <td>23 May</td>
-          </tr>
-          <tr>
-            <td>4. Context specific "pro-tips" in the bottom left corner of each page</td>
+            <td>3. Context specific "pro-tips" in the bottom left corner of each page</td>
             <td>28 May</td>
           </tr>
           <tr>
