Modified welcome view

--- a/registration/templates/welcome.html
+++ b/registration/templates/welcome.html
@@ -6,7 +6,7 @@
   <h1>{{ group.name }}</h1>
 </div>
 
-<div class="col-sm-6 col-sm-offset-3">
+<div class="col-sm-6">
   <div class="panel panel-primary panel-welcome">
     <div class="panel-heading">
       <i class="fa fa-star fa-fw"></i>&nbsp;
@@ -17,22 +17,7 @@
       <p>We hope that eConvenor helps your group to be better organised, more efficient and ultimately more successful.</p>
     </div>
   </div>  
-</div>
 
-<div class="col-sm-6 col-sm-offset-3">
-  <div class="panel panel-default panel-welcome">
-    <div class="panel-heading">
-      <i class="fa fa-flag fa-fw"></i>&nbsp;
-	  Please give us feedback as you use eConvenor
-    </div>
-    <div class="panel-body">
-      <p>Right now, eConvenor is in beta release. This means that we're adding features and fixing bugs all the time.</p>
-      <p>If something doesn't work the way you think it should, or if there is something you'd like eConvenor to do that it doesn't do, let us know! Click on the "Feedback" drop-down in the top right corner of the screen.</p>
-    </div>
-  </div>  
-</div>
-
-<div class="col-sm-6 col-sm-offset-3">
   <div class="panel panel-default panel-welcome">
     <div class="panel-heading">
       <i class="fa fa-laptop fa-fw"></i>&nbsp;
@@ -43,105 +28,42 @@
       <p>You can still access eConvenor on your phone or older tablet, but things won't appear in the right places on the screen, so be warned!</p>
     </div>
   </div>  
-</div>
-<div class="col-sm-6 col-sm-offset-3">
+
   <div class="panel panel-default panel-welcome">
+    <div class="panel-heading">
+      <i class="fa fa-flag fa-fw"></i>&nbsp;
+	  Please give us feedback
+    </div>
+    <div class="panel-body">
+      <p>eConvenor is currently in beta release. This means that we're adding features and fixing bugs all the time.</p>
+      <p>If something doesn't work the way you think it should, or if there is something you'd like eConvenor to do that it doesn't do, let us know! Click on the "Feedback" menu at the top right corner of the screen.</p>
+    </div>
+  </div>
+</div>
+
+<div class="col-sm-6">
+  <div class="panel panel-primary panel-welcome">
     <div class="panel-heading">
       <i class="fa fa-flash fa-fw"></i>&nbsp;
 	  Quick-start guide
     </div>
     <div class="panel-body">
-
-<p>Use this guide to help you set up for the first time, or as a reminder if you've forgotten how to do something. If you need to find this guide again, it lives under the help menu at the top right corner of the page.</p>
-
-<p><strong>*** The very short guide ***</strong></p>
-
-<p>Please follow these steps to start using eConvenor:</p>
-
-<p>1. Add participants - you must add your participants first, so you have people to invite to your meetings and assign tasks to.</p>
-
-<p>2. Create a new meeting - create and send agendas and minutes, record decisions, and allocate tasks.</p>
-
-<p>3. Manage tasks - you can also create tasks directly here, or manage tasks that came out of your meeting.</p>
-
-<p><strong>*** The longer guide with detailed instructions ***</strong></p>
-
-<p><strong>First add participants</strong></p>
-
-<p>The first thing you need to do is add your participants. These are the people you want to give tasks to or invite to meetings.</p>
-
-<p>1. To add a new participant, click on the 'participants' heading in the menu bar on the left. This will open the menu.</p>
-
-<p>2. Next, click 'new participant'. This will open the new participant form in the middle of your screen.</p>
-
-<p>3. Fill in the details for your participant, then click 'save participant'. This will save the details and take you to the 'Manage participants' screen.</p>
-
-<p>Repeat steps 2 and 3 until you have added all your participants.</p>
-
-<p>You can edit your participants details by clicking on their names in the 'Manage participants' screen.</p>
-
-
-<p><strong>Then create a new meeting</strong></p>
-<p>To use the agendas, minutes and decisions functions of eConvenor, you start by creating a new meeting.</p>
-
-<p>1. Click on the 'Meetings' heading in the menu bar on the left.</p>
-
-<p>2. Click 'New meeting'.</p>
-
-<p>3. Fill in the details of the meeting and click 'save meeting'. This will take you to where you create an agenda.</p>
-
-<p>Pro tip! At any point from now, if you save a meeting and want to come back later you will find your meeting under the 'current meetings' heading in the menu bar on the left.</p>
-
-<p>4. Create and edit agenda items by using the tool bar on the right. You can save your progress at any time by clicking 'save changes' in the tool bar on the right.</p>
-
-<p>Pro tip! You can change the order of agenda items by clicking and dragging them in the tool bar on the right.</p>
-
-<p>5. When you are ready to send the agenda, click 'preview and send' in the tool bar on the right. This will bring up an image of what your agenda looks like.</p>
-
-<p>6. To send the agenda, click "to all participants' or 'to selected participants' in the tool bar on the right, under 'send agenda'.</p>
- 
-<p>You will receive a success message when the agenda has sent.</p>
-
-<p><strong>Write the minutes</strong></p>
-<p>Once you've sent out your agenda and you've had the meeting, it's time to write up the minutes.</p>
-
-<p>1. On the menu bar on the left, click on the 'meetings' heading.</p>
-
-<p>2. Click on 'current meetings'. This will take you to the current meetings screen.</p>
-
-<p>3. Click on the pink 'write minutes' button.</p>
-
-<p>4. Fill in the minutes of your meeting. You can add a task or a decision to  an agenda item by clicking the buttons at the bottom of the item. You can save your progress at any time.</p>
-
-<p>Pro tip! If your meeting discussed things that weren't on the agenda you can add them now by clicking 'add item' in the tool bar on the right.</p>
-
-<p>5. When you are ready to send the minutes, click 'preview and send' in the tool bar on the right. This will bring up an image of what your minutes look like.</p>
-
-<p>6. To send the minutes, click "to all participants' or 'to selected participants' in the tool bar on the right, under 'send minutes'.</p>
- 
-<p>You will receive a success message when the minutes have been sent.</p>
-
-<p><strong>Archived meetings</strong></p>
-<p>When you have sent the minutes for a meeting it will be automatically archived. You can view your archived meetings by clicking on the 'meetings' heading in the menu bar on the left, then clicking 'archived meetings'.</p>
-
-
-<p><strong>Manage tasks</strong></p>
-<p>To see your group's tasks, click on the 'tasks' heading in the menu bar on the left, then click 'manage tasks'. Here you can see overdue, incomplete or completed tasks.</p>
-
-<p>If you click on the task, you can edit the task details, or change the status to mark it as complete.</p>
-
-<p>If you're not ready to have a meeting, you can add new tasks directly by clicking 'new task' in the menu bar on the left.</p>
-
-
-<p><strong>Something not working?</strong></p>
-<p>eConvenor is a small, volunteer organisation, and we don't have the resources for a help-desk. If a button is not working, place first check to see that you have entered in all the details needed - sometimes you can't move on until you've finished the job at hand.</p>
-
-<p>If you think that something in eConvenor might be broken, please tell us by using the bug reports, under the 'Feedback' menu, found at the top right corner of the page.</p>
-
-
-<p><strong>Do you need to make the text bigger?</strong></p>
-<p>If you are having difficulty reading the text on any page in eConvenor, please hold down the command key (this key might say Command, cmnd, cntrl or have a picture of a winnow on it on your keyboard), and click the + key until the text is the right size for you. If you make it too big you can decrease the size using the command key and the - key.</p> 
-
+      <p><strong>Step 1:&nbsp; Add participants</strong></p>
+      <p>eConvenor refers to people involved in your group as "participants".</p>
+      <p>Add your group's participants by going to <i>Participants > New participant</i></p>
+      <p><strong>Step 2:&nbsp; Create an agenda for your next meeting</strong></p>
+      <p>Set up and distribute an agenda for your next meeting by going to <i>Meetings > New meeting</i> and following the prompts.</p>
+      <p>Give each agenda item a time limit and eConvenor will calculate your meeting's end time.</p>
+      <p><strong>Step 3:&nbsp; Minute your next meeting</strong></p>
+      <p>Save time by minuting your next meeting with eConvenor during the meeting.</p>
+      <p>Go to <i>Meetings > Current meetings</i> and click the <i>Work on minutes</i> button belonging to the meeting.</p>
+      <p>When you make a decision, click the <i>Add decision</i> button. When you assign a task to someone, click the <i>Add task</i> button.</p>
+      <p><strong>Step 4:&nbsp; Coordinate your group's tasks</strong></p>
+      <p>Go to <i>Tasks > Manage tasks</i> to see and manage the tasks assigned to your group's participants.</p>
+      <p>Assign a new task to someone at any time by going to <i>Tasks > New task</i>.</p>
+      <p><strong>Step 5:&nbsp; Repeat</strong></p>
+      <p>That's all there is to it! Now just repeat steps 2, 3 and 4 for each meeting.</p>
+      <p>For more details, see the <i>User guide</i> under the <i>Help</i> menu.</p>
     </div>
   </div>  
 </div>
