Simplified the quick start guide text

--- a/econvenor/commonstatic/css/econvenor.css
+++ b/econvenor/commonstatic/css/econvenor.css
@@ -438,6 +438,10 @@ body {
   overflow-y: auto;
 }
 
+.panel-help .panel-body {
+  background-color: #ffffff;
+}
+
 .panel-body-light {
   background-color: #ffffff;
 }
