--- a/help/templates/quick_start_guide.html
+++ b/help/templates/quick_start_guide.html
@@ -9,21 +9,46 @@
 	  <i class="fa fa-flash fa-fw fa-lg"></i>&nbsp;
 	  Quick start guide
     </div>
+  </div>
+  <div class="panel panel-default panel-help">
+    <div class="panel-heading">
+	  <i class="fa fa-chevron-circle-right fa-fw fa-lg"></i>&nbsp;
+      Step 1:&nbsp; Add participants
+    </div>
     <div class="panel-body">
-      <p><strong>Step 1:&nbsp; Add participants</strong></p>
       <p>eConvenor refers to people involved in your group as "participants".</p>
       <p>Add your group's participants by going to <i>Participants > New participant</i></p>
-      <p><strong>Step 2:&nbsp; Create an agenda for your next meeting</strong></p>
+    </div>
+    <div class="panel-heading">
+	  <i class="fa fa-chevron-circle-right fa-fw fa-lg"></i>&nbsp;
+      Step 2:&nbsp; Create an agenda for your next meeting
+    </div>
+    <div class="panel-body">
       <p>Set up and distribute an agenda for your next meeting by going to <i>Meetings > New meeting</i> and following the prompts.</p>
       <p>Give each agenda item a time limit and eConvenor will calculate your meeting's end time.</p>
-      <p><strong>Step 3:&nbsp; Minute your next meeting</strong></p>
+    </div>
+    <div class="panel-heading">
+	  <i class="fa fa-chevron-circle-right fa-fw fa-lg"></i>&nbsp;
+      Step 3:&nbsp; Minute your next meeting
+    </div>
+    <div class="panel-body">
       <p>Save time by minuting your next meeting with eConvenor during the meeting.</p>
       <p>Go to <i>Meetings > Current meetings</i> and click the <i>Work on minutes</i> button belonging to the meeting.</p>
       <p>When you make a decision, click the <i>Add decision</i> button. When you assign a task to someone, click the <i>Add task</i> button.</p>
-      <p><strong>Step 4:&nbsp; Coordinate your group's tasks</strong></p>
+    </div>
+    <div class="panel-heading">
+	  <i class="fa fa-chevron-circle-right fa-fw fa-lg"></i>&nbsp;
+      Step 4:&nbsp; Coordinate your group's tasks
+    </div>
+    <div class="panel-body">
       <p>Go to <i>Tasks > Manage tasks</i> to see and manage the tasks assigned to your group's participants.</p>
       <p>Assign a new task to someone at any time by going to <i>Tasks > New task</i>.</p>
-      <p><strong>Step 5:&nbsp; Repeat</strong></p>
+    </div>
+    <div class="panel-heading">
+	  <i class="fa fa-chevron-circle-right fa-fw fa-lg"></i>&nbsp;
+      Step 5:&nbsp; Repeat
+    </div>
+    <div class="panel-body">
       <p>That's all there is to it! Now just repeat steps 2, 3 and 4 for each meeting.</p>
       <p>For more details, see the <i>User guide</i> under the <i>Help</i> menu.</p>
     </div><!-- /.panel-body -->
