--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -180,12 +180,14 @@
   <div class="panel panel-default panel-dashboard">
     <div class="panel-heading">
 	  <i class="fa fa-exclamation-triangle fa-fw"></i>&nbsp;
-	  eConvenor updates
+	  Recent eConvenor updates
     </div>
     <div class="panel-body">
-      <p><strong>Improvements made on May 22nd</strong></p>
-      <p>1. Added the FAQs section. They still need to be formatted nicely, but you'll find them under the Help menu in the top right corner of the screen.</p>
-      <p><strong>Improvements made on May 21st</strong></p>
+      <p><strong>26 May 2014</strong></p>
+      <p>1. Improved the <i>Quick-start guide.</i></p>
+      <p><strong>22 May 2014</strong></p>
+      <p>1. Added the <i>FAQs</i> section. They still need to be formatted nicely, but you'll find them under the Help menu in the top right corner of the screen.</p>
+      <p><strong>21 May 2014</strong></p>
       <p>1. Summaries of overdue, incomplete and recently completed tasks can now be added to minutes. Look for the check box in the "Meeting details" panel of the minutes editing view to activiate this feature.</p>
       <p>2. The format of task reminder emails has been overhauled to make them look much nicer.</p>
     </div>
@@ -196,7 +198,7 @@
   <div class="panel panel-default panel-dashboard">
     <div class="panel-heading">
 	  <i class="fa fa-calendar fa-fw"></i>&nbsp;
-	  Features coming next
+	  Features coming soon
     </div>
     <div class="table-dashboard">
       <table class="table task-table">
@@ -209,18 +211,14 @@
         <tbody> 
           <tr>
             <td>1. User Guide</td>
-            <td>25 May</td>
+            <td>26 May</td>
           </tr>
           <tr>
-            <td>2. Improved Quick Start Guide</td>
-            <td>25 May</td>
-          </tr>
-          <tr>
-            <td>3. Context specific "pro-tips" in the bottom left corner of each page</td>
+            <td>2. Context specific "pro-tips" in the bottom left corner of each page</td>
             <td>28 May</td>
           </tr>
           <tr>
-            <td>5. Agenda templates</td>
+            <td>3. Agenda templates</td>
             <td>Early June</td>
           </tr>
         </tbody>
