User Guide partly complete

--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -198,7 +198,7 @@
   <div class="panel panel-default panel-dashboard">
     <div class="panel-heading">
 	  <i class="fa fa-calendar fa-fw"></i>&nbsp;
-	  Features coming soon
+	  Features coming to eConvenor soon
     </div>
     <div class="table-dashboard">
       <table class="table task-table">
