--- a/registration/templates/welcome.html
+++ b/registration/templates/welcome.html
@@ -50,7 +50,7 @@
     <div class="panel-body">
       <p><strong>Step 1:&nbsp; Add participants</strong></p>
       <p>eConvenor refers to people involved in your group as "participants".</p>
-      <p>Add your group's participants by going to <i>Participants > New participant</i></p>
+      <p>Add your group's participants by going to <i>Participants > New participant</i>.</p>
       <p><strong>Step 2:&nbsp; Create an agenda for your next meeting</strong></p>
       <p>Set up and distribute an agenda for your next meeting by going to <i>Meetings > New meeting</i> and following the prompts.</p>
       <p>Give each agenda item a time limit and eConvenor will calculate your meeting's end time.</p>
