--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -184,7 +184,8 @@
     </div>
     <div class="panel-body">
       <p><strong>26 May 2014</strong></p>
-      <p>1. Improved the <i>Quick-start guide.</i></p>
+      <p>1. Improved the <i>Quick-start guide</i> and <i>FAQs</i>.</p>
+      <p>2. Added the <i>User Guide</i>.</p>
       <p><strong>22 May 2014</strong></p>
       <p>1. Added the <i>FAQs</i> section. They still need to be formatted nicely, but you'll find them under the Help menu in the top right corner of the screen.</p>
       <p><strong>21 May 2014</strong></p>
@@ -210,15 +211,11 @@
         </thead>
         <tbody> 
           <tr>
-            <td>1. User Guide</td>
-            <td>26 May</td>
-          </tr>
-          <tr>
-            <td>2. Context specific "pro-tips" in the bottom left corner of each page</td>
+            <td>1. Context specific "pro-tips" in the bottom left corner of each page</td>
             <td>28 May</td>
           </tr>
           <tr>
-            <td>3. Agenda templates</td>
+            <td>2. Agenda templates</td>
             <td>Early June</td>
           </tr>
         </tbody>
