--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -206,16 +206,29 @@
         <thead>
           <tr>
             <th>Feature</th>
-            <th>ETA</th>
+            <th>Date</th>
           </tr>
         </thead>
         <tbody> 
           <tr>
-            <td>1. Context specific "pro-tips" in the bottom left corner of each page</td>
-            <td>28 May</td>
+            <td>1. Context specific usage tips in the bottom left corner of each page</td>
+            <td>28 May 2014</td>
           </tr>
           <tr>
-            <td>2. Agenda templates</td>
+            <td>2. Improve the look of agenda/minutes covering emails</td>
+            <td>30 May 2014</td>
+          </tr>
+
+          <tr>
+            <td>3. Reusable and customisable agenda templates</td>
+            <td>Early June</td>
+          </tr>
+          <tr>
+            <td>4. Allow a message to be added to agenda/minutes covering emails</td>
+            <td>Early June</td>
+          </tr>
+          <tr>
+            <td>5. Remove character limit for "notes" text in minutes</td>
             <td>Early June</td>
           </tr>
         </tbody>
