--- a/econvenor/templates/app_base.html
+++ b/econvenor/templates/app_base.html
@@ -268,6 +268,17 @@
             </li>
                                 
           </ul>
+          <div class="tip-box panel panel-default panel-dashboard">
+            <div class="panel-heading">
+              <span class="tip-heading">Context-specific tip #1</span>
+              <i class="fa fa-chevron-circle-right pull-right"></i>
+              <i class="fa fa-chevron-circle-left pull-right"></i>
+            </div>
+            <div class="panel-body">
+              <span class="tip-body">This feature will be active by May 29th.</span>
+            </div>
+          </div> 
+        
         </div><!-- /.sidebar -->
 
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 content"
