--- a/help/templates/faqs.html
+++ b/help/templates/faqs.html
@@ -13,7 +13,7 @@
   <div class="panel panel-default panel-help">
     <div class="panel-heading">
 	  <i class="fa fa-certificate fa-fw fa-lg"></i>&nbsp;
-      1.&nbsp; Can more than one person convene a particular group?
+      1.&nbsp; Can multiple people convene one group?
     </div>
     <div class="panel-body">
       <p><i><b>Short answer</b></i></p>
@@ -26,7 +26,7 @@
   <div class="panel panel-default panel-help">
     <div class="panel-heading">
 	  <i class="fa fa-certificate fa-fw fa-lg"></i>&nbsp;
-      2.&nbsp; Can a person convene more than one group?
+      2.&nbsp; Can one person convene multiple groups?
     </div>
     <div class="panel-body">
       <p><i><b>Short answer</b></i></p>
@@ -86,9 +86,10 @@
       <p><i><b>Short answer</b></i></p>
       <p>eConvenor isn't supposed to make money.</p>
       <p><i><b>Long answer</b></i></p>
-      <p>eConvenor is a tool made by activists to help other activists. Money is not a motivation or a consideration.</p>
+      <p>eConvenor is a tool made by activists to help other activists. Money is not our motivation.</p>
       <p>Like everything though, eConvenor has some operating costs, so we ask better funded groups to contribute financially if they can, and we require a financial contribution from political parties and trade unions.</p>
-      <p>Most groups who use eConvenor will have a tiny budget, or no budget at all. These are the groups we had in mind in building eConvenor, and they should eConvenor for free.</p>
+      <p>eConvenor won't have advertising, won't sell your data and won't charge a fee for "premium" features.</p>
+      <p>Most groups who use eConvenor will have a tiny budget, or no budget at all. These are the groups we had in mind in building eConvenor, and they should be able to use eConvenor for free.</p>
       <p>eConvenor will never make a profit. All money which we receive for eConvenor will go back into eConvenor -- both into keeping it running and improving it.</p>
     </div>
   </div><!-- /.panel -->
@@ -103,8 +104,8 @@
       <p><i><b>Long answer</b></i></p>
       <p>Firstly, there is no such thing as perfect security -- hackers routinely steal data from well-resourced targets such as huge corporations and governments. We do our best to keep eConvenor secure, but we can't give any guarantees.</p>
       <p>Broadly speaking, there are three types of security which you need to consider with regard to data held in eConvenor -- security against hackers, security against government agencies and security against accidental loss.</p>
-      <p>Hackers - eConvenor is built on the Django. Django is a large, mature web application framework which has had plenty of time to get the underlying security right. eConvenor is hosted by Webfaction in the UK. Webfaction are a Platform as a Service (PaaS) provider who make sure that the server which eConvenor runs on is up-to-date and well maintained. eConvenor shouldn't be an easy target for hackers.</p>
-      <p>Goernment agencies - eConvenor is based in Melbourne, Australia, and runs from servers in the UK. We will only hand data over to a government agency if we are forced to by a *valid* Australian or UK court order, and even then we'll fight against it as hard as possible.</p>
+      <p>Hackers - eConvenor is built on Django. Django is a mature, open-source web-application framework which has had plenty of time to get the underlying security right. eConvenor is hosted by Webfaction in the UK. Webfaction are a Platform as a Service (PaaS) provider who make sure that the server which eConvenor runs on is up-to-date and well maintained. eConvenor shouldn't be an easy target for hackers.</p>
+      <p>Government agencies - eConvenor is based in Melbourne, Australia, and runs from servers in the UK. We will only hand data over to a government agency if we are forced to by a *valid* Australian or UK court order, and even then we'll fight against it as hard as possible. Note though that goverment agencies have been known to use sophisticated technical means to <i>secretly</i> collect data from even the largest web service providers (Gmail, Facebook, etc) and it's impossible to know how well eConvenor's code and servers would resist such attacks.</p>
       <p>Accidental loss - We keep multiple backups of your data on our UK server, and multiple backups of your data on our machines in Australia. The possibility of accidental loss of data is remote. Also, eConvernor emails you copies of your agendas and minutes, so you also have copies of most of the data which you store in eConvenor.</p>
     </div>
   </div><!-- /.panel -->
@@ -145,8 +146,8 @@
       <p><i><b>Long answer</b></i></p>
       <p>We don't like it, but we have to say it: setting up a service like eConvenor would be a good way for an intelligence service (or services) to spy on activist groups.</p>
       <p>Although we know we're not spies, cops, or anthing of that nature, there's nothing we can do or say that can prove that to you. That said, you can't know whether any other web service might be spying on you, and we know that services like Google and Facebook <i>are</i>.</p>
-      <p>With all data your group puts online, whether with eConvenor or any other web service, ask yourself if it would be a problem if government agencies saw it. For most groups, the answer to that question will be no most of the time. When the answer is yes though, keep that data off the internet unless you're encrypting it with a strong passphrase which no one outside your group knows.</p>
-      <p>With a bit of luck one day you'll meet us. Then you'll probably realise that it's quite unlikely we're cops or spies</p>
+      <p>With all data your group puts online, whether with eConvenor or any other web service, ask yourself if it would be a problem if government agencies saw it. For most groups, the answer to that question will be no most of the time. When the answer is yes though, keep that data off the internet unless you know what you're doing and can encrypt it yourself.</p>
+      <p>With a bit of luck one day you'll meet us. Then you'll probably realise that it's quite unlikely we're cops or spies.</p>
     </div>
   </div><!-- /.panel -->
   <div class="panel panel-default panel-help">
@@ -156,8 +157,7 @@
     </div>
     <div class="panel-body">
       <p><i><b>Short answer</b></i></p>
-      <p>Two Australian activists.
-.</p>
+      <p>Two Australian activists.</p>
       <p><i><b>Long answer</b></i></p>
       <p>eConvenor was started by two activists from Melbourne, Australia -- Keira and Sky.</p>
       <p>For a few decades we've seen how campaigns and groups struggle to be organised and get things done efficiently. One day in late 2012 we realised that a lot of the work of convening a group could be done by a computer, so although we don't have IT backgrounds, we decided to try an make a "virtual convenor". eConvenor is the result.</p>
