--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -183,6 +183,8 @@
 	  Recent eConvenor updates
     </div>
     <div class="panel-body">
+      <p><strong>29 May 2014</strong></p>
+      <p>1. Added a context-specific tips box to the bottom left corner of most pages.</p>
       <p><strong>26 May 2014</strong></p>
       <p>1. Improved the <i>Quick-start guide</i> and <i>FAQs</i>.</p>
       <p>2. Added the <i>User Guide</i>.</p>
@@ -211,24 +213,20 @@
         </thead>
         <tbody> 
           <tr>
-            <td>1. Context specific usage tips in the bottom left corner of each page</td>
-            <td>28 May 2014</td>
-          </tr>
-          <tr>
-            <td>2. Improve the look of agenda/minutes covering emails</td>
+            <td>Improve the look of agenda/minutes covering emails</td>
             <td>30 May 2014</td>
           </tr>
 
           <tr>
-            <td>3. Reusable and customisable agenda templates</td>
+            <td>Reusable and customisable agenda templates</td>
             <td>Early June</td>
           </tr>
           <tr>
-            <td>4. Allow a message to be added to agenda/minutes covering emails</td>
+            <td>Allow a message to be added to agenda/minutes covering emails</td>
             <td>Early June</td>
           </tr>
           <tr>
-            <td>5. Remove character limit for "notes" text in minutes</td>
+            <td>Remove character limit for "notes" text in minutes</td>
             <td>Early June</td>
           </tr>
         </tbody>
