--- a/authentication/templates/user_login.html
+++ b/authentication/templates/user_login.html
@@ -89,6 +89,12 @@
         <button class="btn btn-lg btn-primary btn-block" type="submit" name="login_button">Sign in</button>
       </form>
   	  <p class="text-center red">{{ error }}</p>
+
+      <br>
+
+      <h3 class="text-center">Forgotten your password?</h3>
+      <p class="text-center">Drop us an <a href="mailto:mail@econvenor.org?subject=I+need+a+password+reset">email</a> and we'll sort you out with password reset.</p>
+
   	  
     </div> <!-- /container -->
 
