Minor change to dashboard layout

--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -182,17 +182,37 @@
 	  <i class="fa fa-exclamation-triangle fa-fw"></i>&nbsp;
 	  Recent eConvenor updates
     </div>
-    <div class="panel-body">
-      <p><strong>29 May 2014</strong></p>
-      <p>1. Added a context-specific tips box to the bottom left corner of most pages.</p>
-      <p><strong>26 May 2014</strong></p>
-      <p>1. Improved the <i>Quick-start guide</i> and <i>FAQs</i>.</p>
-      <p>2. Added the <i>User Guide</i>.</p>
-      <p><strong>22 May 2014</strong></p>
-      <p>1. Added the <i>FAQs</i> section. They still need to be formatted nicely, but you'll find them under the Help menu in the top right corner of the screen.</p>
-      <p><strong>21 May 2014</strong></p>
-      <p>1. Summaries of overdue, incomplete and recently completed tasks can now be added to minutes. Look for the check box in the "Meeting details" panel of the minutes editing view to activiate this feature.</p>
-      <p>2. The format of task reminder emails has been overhauled to make them look much nicer.</p>
+    <div class="table-dashboard">
+      <table class="table task-table">
+        <thead>
+          <tr>
+            <th>Description of update</th>
+            <th>Date</th>
+          </tr>
+        </thead>
+        <tbody> 
+          <tr>
+            <td>Added a context-specific tips box to the bottom left corner of most pages.</td>
+            <td>29 May 2014</td>
+          </tr>
+          <tr>
+            <td>Improved the <i>Quick-start guide</i> and <i>FAQs</i>.</td>
+            <td>26 May 2014</td>
+          </tr>
+          <tr>
+            <td>Added the <i>FAQs</i> section.</td>
+            <td>22 May 2014</td>
+          </tr>
+          <tr>
+            <td>Summaries of overdue, incomplete and recently completed tasks can now be added to minutes. Look for the check box in the "Meeting details" panel of the minutes editing view to activiate this feature.</td>
+            <td>21 May 2014</td>
+          </tr>
+          <tr>
+            <td>The format of task reminder emails has been overhauled to make them look much nicer.</td>
+            <td>21 May 2014</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
   </div>  
 </div>
