--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -192,6 +192,10 @@
         </thead>
         <tbody> 
           <tr>
+            <td>Added summaries and nice formatting to agenda/minutes covering emails.</td>
+            <td>04 Jun 2014</td>
+          </tr>
+          <tr>
             <td>Added a context-specific tips box to the bottom left corner of most pages.</td>
             <td>29 May 2014</td>
           </tr>
@@ -233,20 +237,15 @@
         </thead>
         <tbody> 
           <tr>
-            <td>Improve the look of agenda/minutes covering emails</td>
-            <td>30 May 2014</td>
-          </tr>
-
-          <tr>
-            <td>Reusable and customisable agenda templates</td>
+            <td>Allow the creation of reusable, customisable agenda templates.</td>
             <td>Early June</td>
           </tr>
           <tr>
-            <td>Allow a message to be added to agenda/minutes covering emails</td>
+            <td>Allow a message to be added to agenda/minutes covering emails.</td>
             <td>Early June</td>
           </tr>
           <tr>
-            <td>Remove character limit for "notes" text in minutes</td>
+            <td>Remove character limit for "notes" text in minutes.</td>
             <td>Early June</td>
           </tr>
         </tbody>
