Added logo to app_base.html

--- a/econvenor/templates/app_base.html
+++ b/econvenor/templates/app_base.html
@@ -36,9 +36,9 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href={% url 'dashboard' %}>
-            eConvenor
-          </a>
+          <span class="navbar-brand">
+            <img src="{% static 'images/econvenor-logo-100px-lightgrey.png' %}" width="100" height="23" alt="eConvenor logo">
+          </span>
         </div><!-- /.navbar-header -->
 
         <div class="collapse navbar-collapse">
