--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -192,7 +192,7 @@
         </thead>
         <tbody> 
           <tr>
-            <td>Added summaries and nice formatting to agenda/minutes covering emails.</td>
+            <td>Added meeting summaries and nice formatting to agenda/minutes covering emails.</td>
             <td>04 Jun 2014</td>
           </tr>
           <tr>
@@ -237,16 +237,20 @@
         </thead>
         <tbody> 
           <tr>
+            <td>Redesign the eConvenor website (what you see before you log in).</td>
+            <td>Mid June</td>
+          </tr>
+          <tr>
             <td>Allow the creation of reusable, customisable agenda templates.</td>
-            <td>Early June</td>
+            <td>Mid June</td>
           </tr>
           <tr>
             <td>Allow a message to be added to agenda/minutes covering emails.</td>
-            <td>Early June</td>
+            <td>Mid June</td>
           </tr>
           <tr>
             <td>Remove character limit for "notes" text in minutes.</td>
-            <td>Early June</td>
+            <td>Mid June</td>
           </tr>
         </tbody>
       </table>
